src/index.css
@import '~antd/dist/antd.css';

body {
    margin: 0;
    padding: 0;
    font-family: sans-serif;
}

.header {
    color: #45445d;
    font-family: 'Open Sans', 'Arial', 'Helvetica', sans-serif;
    background: #fff;
    padding: 20px 20px 15px;
}

.header-logo {
    height: 70px;
    margin-right: 15px;
}

.header-name {
    font-size: 29px;
    font-weight: bold;
    text-align: left;
    display: block;
}

.header-subtitle {
    display: block;
    font-size: 14px;
    opacity: 0.5;
    margin-bottom: 10px;
}

.content {
    padding: 50px 20px;
    min-height: calc(100vh - 133px);
}

.steps-content {
    margin-top: 16px;
    border: 1px dashed #e9e9e9;
    border-radius: 6px;
    background-color: #fafafa;
    text-align: center;
    padding: 50px 15px;
}

.steps-action {
    margin-top: 24px;
}

.step .ant-steps-item-description {
    max-width: inherit !important;
}

.diff-content {
    font-size: 17px;
    padding: 0 30px;
}

.diff-incorrect {
    cursor: pointer;
    transition: opacity .1s;
}

.diff-incorrect:hover {
    opacity: 0.8;
}

.diff-word--missing {
    background: #faad14;
    color: #fff;
}

.diff-word--added {
    background: #ff5555;
    color: #fff;
}

.diff-word--ignored {
    color: #ccc;
}

.textarea-original {
    font-size: 17px;
}

/* Helpers */
.margin-vertical-lg {
    margin-top: 24px;
    margin-bottom: 24px;
}

